--- a/presentation/src/main/res/layout/app_bar_main.xml
+++ b/presentation/src/main/res/layout/app_bar_main.xml
@@ -21,7 +21,10 @@
 
   </android.support.design.widget.AppBarLayout>
 
-  <include layout="@layout/content_main" />
+  <boilerplate.presentation.view.ui.RepositoriesView
+    android:id="@+id/repositories_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
