--- a/presentation/src/main/res/layout/content_main.xml
+++ b/presentation/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
@@ -12,9 +12,8 @@
   tools:context=".presentation.view.MainActivity"
   tools:showIn="@layout/app_bar_main">
 
-  <TextView
-    android:id="@+id/main_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hello World!" />
-</RelativeLayout>
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/repositories_list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
+</FrameLayout>
