--- a/presentation/src/main/res/layout/view_repositories_content.xml
+++ b/presentation/src/main/res/layout/view_repositories_content.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools">
 
-  <merge xmlns:tools="http://schemas.android.com/tools"
+  <merge
     tools:context=".presentation.view.MainActivity"
     tools:showIn="@layout/activity_main">
 
