--- a/presentation/src/main/res/layout/view_repositories_content.xml
+++ b/presentation/src/main/res/layout/view_repositories_content.xml
@@ -11,7 +11,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
-      android:text="JakeWharton" />
+      android:text="github" />
 
     <Button
       android:id="@+id/button"
