--- a/presentation/src/main/res/layout/view_repositories.xml
+++ b/presentation/src/main/res/layout/view_repositories.xml
@@ -2,9 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
 
-  <merge
-    tools:context=".presentation.view.MainActivity"
-    tools:showIn="@layout/activity_main">
+  <boilerplate.presentation.view.ui.RepositoriesView
+    android:id="@+id/repositoriesView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".presentation.view.MainActivity">
 
     <EditText
       android:id="@+id/editText"
@@ -22,6 +25,7 @@
     <android.support.v7.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
-      android:layout_height="match_parent" />
-  </merge>
+      android:layout_height="match_parent"
+      tools:listitem="@layout/list_item" />
+  </boilerplate.presentation.view.ui.RepositoriesView>
 </layout>
