--- a/presentation/src/main/res/layout/list_item.xml
+++ b/presentation/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
 
     <variable
       name="repository"
-      type="boilerplate.presentation.model.Repository" />
+      type="boilerplate.presentation.Repository" />
   </data>
 
   <android.support.v7.widget.CardView android:id="@+id/card_view"
@@ -49,7 +49,6 @@
         android:layout_toRightOf="@id/avatar"
         android:ellipsize="end"
         android:maxLines="1"
-        android:singleLine="true"
         android:text="@{repository.name}"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="?android:attr/textColorPrimary"
